--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <div class="block">
                 <div class="block-header">
-                    <p>Clubes</p>
+                    <p>Clubs</p>
                 </div>
                 <div class="block-main">
                     <div class="block-inner">
